--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -91,6 +91,7 @@ h1{
     width:20%;
     margin-left:20px;
     margin-right:20px;
+    
 }
 
     #direita ul{
@@ -100,6 +101,8 @@ h1{
         margin:0px;
         padding:0px;
         text-transform: uppercase;
+        background-color:white;
+        box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
 
         border:1px solid #CCCCCC;
         border-radius:3px;
