Adicionando cursor no botão de pagamento e cor de fundo ao passar mouse em cima

--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -143,4 +143,9 @@ h1{
         text-transform: uppercase;
         font-weight: bold;
         border-radius:3px;
+        cursor: pointer;
+    }
+
+    #direita button:hover{
+        background-color:#ff861caf;
     }
